solved some of the issues of styles that stripe was causing

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -4,11 +4,11 @@
   <script src="//code.jquery.com/jquery.js"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-<div class="container">
-	<div class="row">
+<div class="jumbotron color4">
+	<div class="row-fluid">
 	    <div class="span12 text-center">
 			<h2>Congratulations, you have paid <strong>$10.00</strong> for parking!</h2>
-			<h3>Host will expect you soon</h3>
+			<h2>Host will expect you soon</h2>
 		</div>
 	</div>
 </div>
