--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-<link rel="stylesheet" href="/stylesheets/application.scss">
 
 
-<div class="container">
-  <div class="row">
+
+<div class="jumbotron color3">
+  <div class="row-fluid">
       <div class="span12 text-center">
           <h1>Confirm Payment</h1>
           <p>You are booking for <b><%= @address %></b> for <b><%= @custPkgQty %></b> parking spots from <b><%= @custCheckin%></b> to <b><%= @custCheckout%></b>.</p>
