--- a/app/assets/stylesheets/charges.scss
+++ b/app/assets/stylesheets/charges.scss
@@ -3,3 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+.color3 {
+	color: green;
+	background-color: red;
+	background: image-url('/seattle.png') center center;
+
+}
