re-added address

--- a/app/views/main/howitworks.html.erb
+++ b/app/views/main/howitworks.html.erb
@@ -12,6 +12,6 @@ Creating a profile is essential to interact with other alternative parking enthu
 
 <h3>Searching</h3>
 <p>
-Searching will involve inserting the area you want to find parking, parking space quantity, checkin date, and checkout date. Once you have entered that information, you will show results of places offering parking spaces. Then you can book your space, which should also be available on your profile page.
+Searching will involve inserting the area you want to find parking, parking space quantity, checkin date, and checkout date. Once you have entered that information, you will see results of places offering parking spaces.
 <p>
 
