--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a href="/"><img src="#" alt="P3 logo"></a>
+    <a href="/"><h1 id="title">ParkIt, Inc.</h1></a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
