fixed jeffers again

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
 // Search bar
 
 .searchbar {
-  background: linear-gradient(#30448D,#4C4980);
+/*  background: linear-gradient(rgba(46,68,141, 0.8),rgba(76,73,128,0.8));*/
   margin: 0 auto;
   text-align: center;
   width: 100%; 
@@ -60,8 +60,16 @@ $line-height: 300px;
   border-radius: 0;
 }
 
-body {
+/*body {
   background: #EEEEEE;
+}*/
+
+body {
+  background-image: url("/night_pic.jpg");
+  background-attachment: fixed; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .navbar {
@@ -208,4 +216,12 @@ body {
     color: #CD1231;
     text-decoration: none;
   }
+}
+
+* {
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1 {
+  font-family: 'Belleza', sans-serif;
 }
