--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -33,12 +33,12 @@
 	margin-top: -10px;
 }
 
-.bg_id {
+/*.bg_id {
 	background-image: url("/night_pic.jpg");
-	bacground-repeat: no-repeat;
+	background-repeat: no-repeat;
 	background-size: 100%;
 }
-
+*/
 .resultsHeader {
 	color: white;
 }
