fixed the datetime insert

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -2,11 +2,11 @@
 <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
 <%= bootstrap_form_for @reservation do |p| %>
- <%= p.text_field :id, :value => @user_id, class: "id" %>
- <%= p.text_field :checkin, :value => @custCheckin, class: "checkin" %>
- <%= p.text_field :checkout, :value => @custCheckout, class: "checkout" %>
- <%= p.text_field :property_id, :value => @property_id, class: "property_id" %>
- <%= p.text_field :user_id, :value => @current_user.id, class: "user_id" %>
+ <%= p.hidden_field :id, :value => @user_id, class: "id" %>
+ <%= p.hidden_field :checkin, :value => @custCheckin, class: "checkin" %>
+ <%= p.hidden_field :checkout, :value => @custCheckout, class: "checkout" %>
+ <%= p.hidden_field :property_id, :value => @property_id, class: "property_id" %>
+ <%= p.hidden_field :user_id, :value => @current_user.id, class: "user_id" %>
 <% end %>
 
 <div class="jumbotron color3">
