--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -2,49 +2,19 @@
 	<div class="row">
 		<!-- margin left -->
 		<div class="col-md-1"></div>
-		<div class="col-md-11">
-			<h1 class="resultsHeader">Results</h1>
+			<div class="col-md-11">
+				<h1 class="resultsHeader">Results</h1>
 
-<% if params[:city].present? && params[:parking_quantity].present? && params[:checkin].present? && params[:checkout].present? %>
-	<p>Your search results for <b><%=params[:city].capitalize%></b> for <b><%=params[:parking_quantity]%></b> parking spots from <b><%=params[:checkin]%></b> at <b><%=params[:checkin_time]%></b> to <b><%=params[:checkout]%></b> at <b><%=params[:checkout_time]%></b>
-	</p>
-
-<% elsif !(params[:city].present?) || !(params[:parking_quantity].present?) || !(params[:checkin].present?) || !(params[:checkout].present?)  %>
-
-	<h2>All available properties</h2>
-
-<% end %>
-
-<div class="results_row row">
-
-	<div class="results_left col-xs-6 col-sm-6 col-md-6 col-lg-6">
-	
-	<% @properties.each do |p|%>
-		<div class="well">
-			<p>Title: <%= p.title %></p>
-			<p>Description: <%= p.description %></p>
-			<p>Price: $<%= p.price %></p>
-			<p>Address: <%= p.address %></p>
-			<p>Parking capacity: <%= p.parking_quantity %></p>
-			<p>Parking available: <b><%= p.available.nil? ? 0 : p.available %></b></p>
-
-			<% if !p.available.nil? && p.available > 0 %>
-
-				<%= link_to "Pick this driveway", result_path(p, 
-					checkin: params[:checkin], 
-					checkin_time: params[:checkin_time], 
-					checkout: params[:checkout], 
-					checkout_time: params[:checkout_time],
-					parking_quantity: params[:parking_quantity]
-				),
-				class: "btn btn-primary" %>
-			
-			<% else %>
-				<p>No more parking available at <b><%= p.title %></b></p>
-
-			<% end %>
+				<% if params[:city].present? && params[:parking_quantity].present? && params[:checkin].present? && params[:checkout].present? %>
+					<p>Your search results for <b><%=params[:city].capitalize%></b> for <b><%=params[:parking_quantity]%></b> parking spots from <b><%=params[:checkin]%></b> at <b><%=params[:checkin_time]%></b> to <b><%=params[:checkout]%></b> at <b><%=params[:checkout_time]%></b></p>
+				<% elsif !(params[:city].present?) || !(params[:parking_quantity].present?) || !(params[:checkin].present?) || !(params[:checkout].present?)  %>
+					<h2>All available properties</h2>
+				<% end %>
+			</div>
 		</div>
 	</div>
+
+
 	<div class="results_row row">
 		<!-- margin left -->
 		<div class="col-md-1"></div>
