styling profile charges nav

--- a/app/assets/stylesheets/charges.scss
+++ b/app/assets/stylesheets/charges.scss
@@ -3,9 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.color3 {
-	color: green;
-	background-color: red;
-	background: image-url('/seattle.png') center center;
 
+#content {
+	background-color: rgba(245,245,245, 0.7);
 }
