--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
 
 	<div class="row">
-		<div id="aboutme" class="col-xs-12 col-sm-6 col-md-6 col-md-offset-1">
+		<div class="col-md-1"></div>
+		<div id="content" class="well col-xs-12 col-sm-6 col-md-4">
 			<h3>
 				<p><%= @user.name %></p>
 				<small>
@@ -18,7 +19,9 @@
 			</h3>
 		</div>
 
-		<div id="prop" class="col-xs-6 col-md-5">
+		<div class="col-md-1"></div>
+
+		<div id="content" class=" well col-xs-6 col-md-5">
 		<h3>My Properties
 			<%= link_to '', new_property_path(), class: 'fa fa-plus-circle' %></h3>
 			<% @properties.each do |property|%>
@@ -29,10 +32,12 @@
 				</p>
 			<% end %>
 		</div>
+		<div class="col-md-1"></div>
 	</div>
 
 	<div class="row">
-		<div id="trips" class="col-xs-12 col-sm-6 col-md-6 col-md-offset-1">
+		<div class="col-md-1"></div>
+		<div id="content" class="well col-xs-12 col-sm-6 col-md-4">
 			<h3>My Trips</h3>
 			<% @reservations.each do |reservation|%>
 				<p>
@@ -40,9 +45,9 @@
 				</p>
 			<% end %>
 		</div>
+		<div class="col-md-1"></div>
 
-
-		<div id="hostings" class="col-xs-12 col-sm-6 col-md-5">
+		<div id="content" class="well col-xs-12 col-sm-6 col-md-5">
 			<h3>My Hostings</h3>
 			<% @myhosted.each do |reservation|%>
 				<p>
@@ -50,6 +55,7 @@
 				</p>
 			<% end %>
 		</div>
+		<div class="col-md-1"></div>
 	</div>
 
 </div>
