--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,7 +75,7 @@
 
       <div class="form-group date">
         <div class="input-group" id='datetimepicker2'>
-          <label class="control-label hidden" for="checkout">Checkout</label><input placeholder="Check in date/time" class="form-control" name="checkout" id="checkout" type="text">
+          <label class="control-label hidden" for="checkout">Checkout</label><input placeholder="Check out date/time" class="form-control" name="checkout" id="checkout" type="text">
           <div class="input-group-addon">
               <span class="glyphicon glyphicon-calendar"></span>
           </div>
