css landing page done

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,8 +1,12 @@
-<div class="jumbotron">
+<!-- <div class="jumbotron">
   <%#= image_tag "seattle.png" %>
   <div class="innards">
     <h1>Welcome</h1>
   </div>
+</div> -->
+
+<div class="innards">
+  <h1>Welcome to ParkIt</h1>
 </div>
 
 <div class="container">
@@ -10,9 +14,7 @@
     <div class="col-xs-12 col-md-10 col-md-offset-1">
       <div class="img-responsive" id="pike">
         <h2>How it works</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eos odio doloribus qui perspiciatis, totam perferendis, hic nemo architecto dolore accusantium ea. Ea porro necessitatibus non quis cupiditate, enim aspernatur.
-          </p>
+          <p>ParkIt involves searching for available driveways for parking. Whether you are an early morning commuter or just needing a parking space at the last minute, our web application will help you out. </p>
       </div>
     </div>
   </div>
