--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,11 +46,8 @@
   font-size: 18px;
 }
 
-
-  
   #title {
-    border: 1px dotted black;
-    color: #31448C;
+    color: #337AB7;
     font-family: 'Abril Fatface', cursive, Arial, serif;
     font-weight: 400; 
     font-size: 35px;
@@ -111,20 +108,34 @@ body {
   }
 }
 
-.jumbotron {
-  position: relative;
-  padding-top: 0px;
-  width: 100%;
-  height: 400px;
-  background: url('/seattle.png') center center;
-  background-size: cover;
-  overflow: hidden;
-
-  .innards {
+.innards {
     text-align: center;
-    color: white;
-  }
+    margin: 20px 0;
+
+    h1 {
+      color: white;
+      font-family: 'Abril Fatface', cursive, Arial, serif;
+      font-weight: 400;
+      font-size: 60px;
+      margin: 0 auto;
+      width: 600px;
+    }
 }
+
+// .jumbotron {
+//   position: relative;
+//   padding-top: 0px;
+//   width: 100%;
+//   height: 400px;
+//   background: url('/seattle.png') center center;
+//   background-size: cover;
+//   overflow: hidden;
+
+//   .innards {
+//     text-align: center;
+//     color: white;
+//   }
+// }
 
 .btn-primary {
   background: #40B3DF;
@@ -158,6 +169,7 @@ body {
     h2 {
       @include transition(0.5s ease-in-out);
       font-weight: bold;
+      font-size: 50px;
       position: relative;
       line-height: $line-height;
       text-align: center;
@@ -193,6 +205,7 @@ body {
 
     h2 {
       line-height: $line-height;
+      font-size: 50px;
     }
   } 
   #amsterdam {
@@ -207,6 +220,7 @@ body {
 
     h2 {
       line-height: $line-height;
+      font-size: 50px;
     } 
 }
 
