results page css done

--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -39,8 +39,21 @@
 	background-size: 100%;
 }
 */
+
+.diff {
+	color: white;
+	font-size: 18px;
+	// text-align: center;
+}
+
+b {
+	font-weight: bold;
+}
+
 .resultsHeader {
 	color: white;
+	font-size: 50px;
+	text-align: center;
 }
 
 #content {
