--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -1,7 +1,6 @@
-<h2>About Us</h2>
+<h2 id="aboutPage">About Us</h2>
 
 <div class="container-fluid">
-<p class="title">About</p>
 <!--     <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2">
       <p class="description">Fare <span class="last">Start</span> is a full stack web application built using Ruby on Rails for General Assembly Seattle.</p>
     </div> -->
