--- a/app/assets/stylesheets/charges.scss
+++ b/app/assets/stylesheets/charges.scss
@@ -2,8 +2,23 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.confirm {
+	font-size: 42px;
 
+	b {
+	font-size: 17px
+	}
+}
+
+.chargeNew {
+	font-size: 20px;
+}
 
 #content {
-	background-color: rgba(245,245,245, 0.7);
+	background-color: rgba(245,245,245, 0.4);
+}
+
+.chargeCreate {
+	background-color: rgba(245,245,245, 0.4);
+	padding: 5px;
 }
