--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,3 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#aboutPage {
+	color: white;
+	font-size: 50px;
+	text-align: center;
+}
+
+.bio .name {
+	color: white;
+	font-size: 20px;
+}
