--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,8 +1,7 @@
-<div class="jumbotron color4">
+
 	<div class="row-fluid">
-	    <div class="span12 text-center">
+	    <div class="chargeCreate span12 text-center">
 			<h2>Congratulations, you have paid <strong>$10.00</strong> for parking!</h2>
 			<h2>Host will expect you soon</h2>
 		</div>
 	</div>
-</div>
