--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,19 +1,18 @@
-<h1>Properties#index</h1>
-<p>Find me in app/views/properties/index.html.erb</p>
+<div id="proIndex">
 
-<h1>List of all properties</h1>
-<% @properties.each do |p| %>
-	
-	<div class="well">
-		<%= p.address %>
-		<%= p.parking_quantity %>
-		<%= p.price %>
-		<%= p.title %>
-		<%= p.description %>
-	</div>
-<% end %>
+	<h1>List of all properties</h1>
+	<% @properties.each do |p| %>
+		
+		<div class="well">
+			<p>Address: <%= p.address %></p>
+			<p>Parking Availability: <%= p.parking_quantity %></p>
+			<p>Price: <%= p.price %></p>
+			<p>Title: <%= p.title %></p>
+			<p>Description: <%= p.description %></p>
+		</div>
+	<% end %>
 
-
+</div>
 
 
 
