--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -8,7 +8,20 @@
 	text-align: center;
 }
 
+#bio-well {
+  background-color: rgba(255, 255, 255, 0.3);
+}
 .bio .name {
-	color: white;
-	font-size: 20px;
+  color: white;
+  font-size: 20px;
+  
+  }
+
+.fa-github,
+.fa-linkedin-square {
+  color: white;
+
+  &:hover {
+    color: gray;
+  }
 }
